Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131112

Vertical ValueAxis title with labels overlap

XMLWordPrintable

    • All
    • 2d1fa5281 (dev), c2b18dc1a (6.9), ceea75ae7 (6.8)

      Vertical ValueAxis title is rendered on the axis labels when the string is long enough. Apparently the longer it is the further to the right it is rendered.

      Minimal reproducible example:

      import QtQuick
      import QtGraphs
      
      Window {
        width: 640
        height: 480
        visible: true
        title: qsTr("Graphs 2D - Line Graph")
      
        GraphsView {
          anchors.fill: parent
      
          axisX: ValueAxis {}
      
          axisY: ValueAxis {
            titleText: "Y axis loooooooooooong title"
            titleColor: "white"
          }
        }
      }
      

        For Gerrit Dashboard: QTBUG-131112
        # Subject Branch Project Status CR V

            owaisakhtar Owais Akhtar
            bartoszrudzki Bartosz Rudzki
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes