Fix Vertical ValueAxis title with labels overlap

Fixes: QTBUG-131112
Change-Id: I0d460849be5a369b84b026a87e751f1260178c7f
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 2d1fa5281a1cdb367ee24418ffdb69e587c19dfb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit c2b18dc1ae57bbeb0568e35818d770f63ad308e5)